tests/neg/i11797.scala
object Foo:
  @annotation.implicitNotFound("Oops")
  type Bar

@main def run(): Unit =
  summon[Foo.Bar]     // error