tests/neg/i11797.check
-- Error: tests/neg/i11797.scala:6:17 ----------------------------------------------------------------------------------
6 |  summon[Foo.Bar]     // error
  |                 ^
  |                 Oops
